--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "avisos",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Juan Carlos Fernández",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -21,9 +21,13 @@
     "@angular/router": "~8.2.14",
     "@capacitor/core": "1.5.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/social-sharing": "^5.23.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-plugin-x-socialsharing": "^5.6.4",
+    "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -53,5 +57,11 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-sqlite-storage": {}
+    }
+  }
 }
