--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/service-worker": "~8.2.14",
     "@capacitor/core": "1.5.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/onesignal": "^5.23.0",
     "@ionic-native/social-sharing": "^5.23.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +32,7 @@
     "cordova-plugin-x-socialsharing": "^5.6.4",
     "cordova-sqlite-storage": "^5.0.0",
     "core-js": "^2.5.4",
+    "onesignal-cordova-plugin": "^2.8.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -63,7 +65,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-x-socialsharing": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "onesignal-cordova-plugin": {}
     }
   }
 }
